syntax = "proto3";

package crops;

service CropsService {
    rpc CreateCrop (CreateCropDto) returns (Crop) {}
    rpc FindAll (FindAllCropsDto) returns (CropResponse) {}
    rpc FindAllByState (FindAllCropsByStateDto) returns (CropResponse) {}
    rpc FindOneCrop (FindOneCropDto) returns (Crop) {}
    rpc FindByCompanyId (FindByCompanyIdDto) returns (CropResponse) {}
    rpc UpdateCrop (UpdateCropDto) returns (Crop) {}
    rpc RemoveCrop (FindOneCropDto) returns (Crop) {}
}

service RecordsService {
    rpc CreateRecord (CreateRecordDto) returns (CropRecord) {}
    rpc FindAll (FindAllRecordsDto) returns (CropRecordResponse) {}
    rpc FindAllByCropAndPhase (FindAllRecordsByCropAndPhase) returns (CropRecordResponse) {}
    rpc FindOneRecord (FindOneRecordDto) returns (CropRecord) {}
    rpc UpdateRecord (UpdateRecordDto) returns (CropRecord) {}
    rpc RemoveRecord (FindOneRecordDto) returns (CropRecord) {}
}

message Crop {
    string id = 1;
    string name = 2;
    string author = 3;
    bool state = 4;
    string phase = 5;
    string startDate = 6;
}

message CropResponse {
    repeated Crop crops = 1;
}

message CropRecord {
    string id = 1;
    string createdDate = 2;
    string updatedDate = 3;
    string author = 4;
    string phase = 5;
    string payload = 6;
}

message CropRecordResponse {
    repeated CropRecord records = 1;
}

message CreateCropDto {
    string name = 1;
    string author = 2;
    string companyId = 3;
}

message FindAllCropsDto {}

message FindAllCropsByStateDto {
    bool state = 1;
}

message FindOneCropDto {
    string id = 1;
}

message FindByCompanyIdDto {
    string companyId = 1;
}

message UpdateCropDto {
    string id = 1;
    optional string phase = 2;
    optional bool state = 3;
}

message CreateRecordDto {
    string author = 1;
    string phase = 2;
    string payload = 3;
    string cropId = 4;
}

message FindOneRecordDto {
    string id = 1;
}

message FindAllRecordsDto {}

message FindAllRecordsByCropAndPhase{
    string cropId = 1;
    string phase = 2;
}

message UpdateRecordDto {
    string id = 1;
    string payload = 2;
}